--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,7 +3,7 @@
 @import './nav.scss';
 @import './settings.scss';
 @import './charSel.scss';
-
+@import './placeShip.scss';
 
 body{
   background-image:linear-gradient( rgba(0,0,0,0.20), rgba(0,0,0,0.20)), url('../assets/images/bgImage.jpg');
