--- a/src/sass/nav.scss
+++ b/src/sass/nav.scss
@@ -10,6 +10,7 @@ nav{
     justify-self: center;
     align-self: center;
     box-shadow: 0px 4px 4px $shadowColor;
+    user-select: none;
   }
 
   .settingsButton{
