--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -56,6 +56,7 @@ $settingPageBg: #3B2772;
   font-size: 48px;
   color: white;
   border-radius: 9px;
+  user-select: none;
   border: 0px;
   cursor: pointer;
   box-shadow: 0px 4px 4px $shadowColor;
