Finish continue button & Add battle layout

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,8 @@
 @import './settings.scss';
 @import './charSel.scss';
 @import './placeShip.scss';
+@import './battle.scss';
+
 
 body{
   background-image:linear-gradient( rgba(0,0,0,0.20), rgba(0,0,0,0.20)), url('../assets/images/bgImage.jpg');
