--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -16,7 +16,7 @@ $settingPageBg: #3B2772;
   border-radius: 20px;
   border-width: 20px;
   border-style: solid;
-
+  box-shadow: 0px 4px 4px $shadowColor;
 }
 
 %boardCell{
@@ -24,10 +24,7 @@ $settingPageBg: #3B2772;
   height: 51px;
   border: solid 1px;
   background-color: #ABB5DC;
-<<<<<<< Updated upstream
-=======
   position: relative;
->>>>>>> Stashed changes
 }
 
 
